# src/models/schema/work/splitquestiontask.schema.ts
@@ -1,11 +1,0 @@
-export interface SplitQuestionTaskAttributes {
-    taskId?: string;
-    questionFileKey?: string;
-    answerFileKey?: string;
-}
-
-export interface SplitQuestionTaskSchema extends SplitQuestionTaskAttributes {
-    taskId: string;
-    questionFileKey: string;
-    answerFileKey: string;
-}
