# src/models/schema/work/work.schema.ts
@@ -1,9 +1,0 @@
-export interface WorkAttributes {
-    workKey?: string;
-    taskGroupId?: string;
-}
-
-export interface WorkSchema extends WorkAttributes {
-    workKey: string;
-    taskGroupId: string;
-}
