# swagger/index.yaml
@@ -1,7 +1,7 @@
 swagger: "2.0"
 info:
-  title: hwp-manager
-  description: hwp-manager test
+  title: dog-manager
+  description: dog-manager test
   version: 0.0.1
 #host: localhost:3002
 schemes:
@@ -9,8 +9,8 @@ schemes:
   - https
 
 tags:
-  - name: work
-    description: 문제 처리 포맷입니다.
+  - name: dog
+    description: 반려견 소리 처리 포맷입니다.
 
 securityDefinitions:
   jwt:
@@ -26,166 +26,233 @@ security:
   - bearer: []
 
 paths:
-  /question/hwpMetadataExtract:
+  /dog/createDog/{dogKey}:
     post:
-      summary: "hwp 파일의 metadata를 추출합니다."
-      description: "workGroupId : metadata를 분석할 파일들의 S3 Key의 prefix입니다.\n
-      작업 중 동일 workGroupId로 요청 시 workGroupId가 return됩니다.\n
-      작업 종료 후 동일 workGroupId로 요청 시 workGroupId가 return되며 message가 다시 AWS SNS로 notification됩니다.\n
-      AWS SNS에 아래와 같은 형태로 notification됩니다.\n
-      ```typescript
-      message : {
-        \tdata : Result[]
-        \tworkKey : string
-      }
-      ```
-      ```typescript
-      Result : {
-        \tbucket: string
-        \tquestionKey : string
-        \tanswerKey : string
-        \tmetadata : Metadata
-
-        \tquestionGroupKey? : string // 연속 문제 그룹의 key
-        \twc? : WC // 공통지문을 제외한 문제 부분 (Without Common)
-
-        \ttaskGroupId: string // S3에 업로드된 모든 파일들의 Key의 공통 Prefix
-      }
-      ```
-      ```typescript
-      Metadata : {
-        \tpublisher: string | null (출제처, 출처)
-        \ttag: string | null (태그)
-        \tlevel: string | null (난이도)
-        \tcategory: string | null (유형)
-        \ttype: string | null (분류)
-        \tapply: string | null (용도)
-        \ttarget: string | null (과목)
-
-        \tquestionFileMetadata: FileMetadata
-        \tanswerFileMetadata: FileMetadata
-      }
-      ```
-      ```typescript
-      WC : {
-        \tquestionKey: string
-        \tquestionFileMetadata: FileMetadata
-      }
-      ```
-      ```typescript
-      FileMetadata : {
-        \timageHeight: number
-        \tthumbnailKey: string
-        \textractedImageKey: string
-        \ttext: string
-        \tbucket: string
-      }
-      ```
-      "
-
+      summary: "반려견 울음 소리를 업로드합니다."
+      description: "S3에 울음 소리를 업로드합니다"
       tags:
-        - work
+        - dog
       parameters:
-        - name: body
-          in: body
+        - name: dogKey
+          type: string
           required: true
-          schema:
-            properties:
-              taskGroupId:
-                type: string
+          in: path
 
       responses:
         200:
-          description: "workKey를 내려줍니다."
+          description: "업로드한 파일의 key를 내려줍니다"
           schema:
             properties:
-              workKey:
+              dogKey:
                 type: string
         400:
           description: "Bad Request : 요청이 잘못되었습니다."
+        403:
+          description: "Forbidden : 권한이 없습니다."
         404:
-          description: "Not Found : S3에 파일이 없습니다."
+          description: "Not Found : 파일이 없습니다."
         500:
           description: "Unexpected Exception : 알 수 없는 에러입니다."
 
-  /question/questionSplit:
+  /dog/setDogSoundType/dogKey/{soudnKey}:
     post:
-      summary: "hwp 파일의 문제들을 split합니다."
-      description: "questionFileKey: 문제 파일의 Key입니다.\nanswerFileKey: 정답 파일의 Key입니다.\n
-      AWS SNS에 아래와 같은 형태로 notification됩니다.\n
-      ```typescript
-      message: {
-        \tworkKey : string
-        \tfileKeys : {
-          \t\tquesitonKey: string, // s3경로 키 (파일이름포함)
-          \t\tanswerKey: string, // s3경로 키 (파일이름포함)
-          \t\tmetadataKey: string, // s3경로 키 (파일이름포함)
-          \t\tquesitonWCKey: string // s3경로 키 (파일이름포함)
-          \t\tbucket: string
-          \t\ttaskGroupId: string,
-        \t}
-      }
-      ```
-      "
+      summary: "반려견 울음 소리를 업로드합니다."
+      description: "S3에 울음 소리를 업로드합니다"
       tags:
-        - work
+        - dog
       parameters:
-        - name: body
-          in: body
+        - name: dogKey
+          type: string
           required: true
-          schema:
-            properties:
-              questionFileKey:
-                type: string
-              answerFileKey:
-                type: string
+          in: path
+        - name: soundKey
+          type: string
+          required: true
+          in: path
 
       responses:
         200:
-          description: "workKey를 내려줍니다."
+          description: "업로드한 파일의 key를 내려줍니다"
           schema:
             properties:
-              workKey:
+              dogKey:
                 type: string
         400:
           description: "Bad Request : 요청이 잘못되었습니다."
+        403:
+          description: "Forbidden : 권한이 없습니다."
         404:
-          description: "Not Found : S3에 파일이 없습니다."
+          description: "Not Found : 파일이 없습니다."
         500:
           description: "Unexpected Exception : 알 수 없는 에러입니다."
 
-  /question/makePaper:
-    post:
-      summary: "문제 list를 시험지로 만듭니다."
-      description: "questionFileKeys: 시험지로 만들 문제들의 Key의 list입니다.\ndynamicContents: 표지에 들어갈 내용입니다. data: 한글 누름틀 이름, string: 내용 입니다.\n"
+  /dog/getDogSoundType/{soundKey}:
+    get:
+      summary: "최근 반려견 울음 소리를 가져옵니다."
+      description: "dogKey: 울음 소리를 가져올 key입니다."
       tags:
-        - work
+        - dog
       parameters:
-        - name: body
-          in: body
+        - name: soundKey
+          in: path
+          type: string
           required: true
+
+      responses:
+        200:
+          description: "반려견 소리의 list를 내려줍니다."
           schema:
             properties:
-              questionFileKeys:
+              dogSounds:
                 type: array
                 items:
                   type: string
-              dynamicContents:
-                type: object
-                properties:
-                  data:
-                    type: string
-
-      responses:
-        200:
-          description: "생성된 시험지의 Key를 내려줍니다."
-          schema:
-            properties:
-              paperKey:
-                type: string
         400:
           description: "Bad Request : 요청이 잘못되었습니다."
         404:
-          description: "Not Found : S3에 파일이 없습니다."
+          description: "Not Found : 파일이 없습니다."
         500:
           description: "Unexpected Exception : 알 수 없는 에러입니다."
+
+  /dog/uploadDogSound/{dogKey}/{soundKey}:
+    post:
+      summary: "반려견 울음 소리를 업로드합니다."
+      description: "S3에 울음 소리를 업로드합니다"
+      tags:
+        - dog
+      parameters:
+        - name: dogKey
+          type: string
+          required: true
+          in: path
+        - name: soundKey
+          type: string
+          required: true
+          in: path
+
+      responses:
+        200:
+          description: "업로드한 파일의 key를 내려줍니다"
+          schema:
+            properties:
+              dogKey:
+                type: string
+        400:
+          description: "Bad Request : 요청이 잘못되었습니다."
+        403:
+          description: "Forbidden : 권한이 없습니다."
+        404:
+          description: "Not Found : 파일이 없습니다."
+        500:
+          description: "Unexpected Exception : 알 수 없는 에러입니다."
+
+  /dog/getDogSound/{soundKey}:
+    get:
+      summary: "최근 반려견 울음 소리를 가져옵니다."
+      description: "dogKey: 울음 소리를 가져올 key입니다."
+      tags:
+        - dog
+      parameters:
+        - name: dogKey
+          in: path
+          type: string
+          required: true
+
+    responses:
+      200:
+        description: "반려견 소리의 list를 내려줍니다."
+        schema:
+          properties:
+            dogSounds:
+              type: array
+              items:
+                type: string
+      400:
+        description: "Bad Request : 요청이 잘못되었습니다."
+      404:
+        description: "Not Found : 파일이 없습니다."
+      500:
+        description: "Unexpected Exception : 알 수 없는 에러입니다."
+
+  /dog/getAllDogSound/{dogKey}:
+    get:
+      summary: "최근 반려견 울음 소리를 모두 가져옵니다."
+      description: "dogKey: 울음 소리를 가져올 key입니다."
+      tags:
+        - dog
+      parameters:
+        - name: dogKey
+          in: path
+          type: string
+          required: true
+
+      responses:
+        200:
+          description: "반려견 소리의 list를 내려줍니다."
+          schema:
+            properties:
+              dogSounds:
+                type: array
+                items:
+                  type: string
+        400:
+          description: "Bad Request : 요청이 잘못되었습니다."
+        404:
+          description: "Not Found : 파일이 없습니다."
+        500:
+          description: "Unexpected Exception : 알 수 없는 에러입니다."
+
+  /dog/musicStart/{dogKey}:
+    post:
+      summary: "반려견의 울음 소리가 불안 상태면 음악을 시작합니다."
+      description: "userKey: 음악 상태를 컨트롤 할 key입니다.\nRaspberry Pi에 음악 시작 요청을 합니다."
+      tags:
+        - dog
+      parameters:
+        - name: dogKey
+          in: path
+          type: string
+          required: true
+
+
+      responses:
+        200:
+          description: "음악 재생 여부를 내려줍니다."
+          schema:
+            properties:
+              isStartMusic:
+                type: boolean
+        400:
+          description: "Bad Request : 요청이 잘못되었습니다."
+        403:
+          description: "Forbidden : 권한이 없습니다."
+        404:
+          description: "Not Found : 파일이 없습니다."
+        500:
+          description: "Unexpected Exception : 알 수 없는 에러입니다."
+
+  /dog/musicStateGet/{dogKey}:
+      get:
+        summary: "현재 음악 재생 상태를 가져옵니다."
+        description: "userKey: 음악 재생 상태를 가져올 key입니다."
+        tags:
+          - dog
+        parameters:
+          - name: dogKey
+            in: path
+            type: string
+            required: true
+
+        responses:
+          200:
+            description: "현재 음악 재생상태를 내려줍니다."
+            schema:
+              properties:
+                isStartMusic:
+                  type: boolean
+          400:
+            description: "Bad Request : 요청이 잘못되었습니다."
+          404:
+            description: "Not Found : 파일이 없습니다."
+          500:
+            description: "Unexpected Exception : 알 수 없는 에러입니다."
